# sharedLibs

./: .gitmodules  README.md
CPTECLIBS/libax/: comp.sh  configure
CPTECLIBS/libax/m4/: require_libf90.m4
CPTECLIBS/libax/src/: Makefile-deps  Makefile.am  fileAccess.f90  gribtab.046.tab  m_GrADSfiles.F90
CPTECLIBS/libmisc/: configure  configure~  ltmain.sh
CPTECLIBS/libmisc/.svn/: wc.db
CPTECLIBS/libmisc/m4/: libtool.m4  ltsugar.m4  lt~obsolete.m4
CPTECLIBS/libmisc/src/: .Makefile.am.swp  .m_time.f90.swp  DateToSeconds.f90  Makefile-headers  Makefile.am  Makefile.in
CPTECLIBS/libmisc/src/old/: dateTimeMod.f90~  t.f90  t.f90~  teste.f90  teste2.f90  testfmt.f90
CPTECLIBS/libmisc/src/tmp/: a.out  datetime_module.mod  teste.f90
CPTECLIBS/sigioBAM/src/: Makefile.am  Makefile.in  TypeKinds.f90
NCEPLIBS/bacio/: config  packed-refs
NCEPLIBS/bacio/objects/pack/: pack-f791ba1efcd89fd0db0b4435d4525d62fe5d7c0c.idx  pack-f791ba1efcd89fd0db0b4435d4525d62fe5d7c0c.pack
libax/: configure.ac  configure~
libax/src/: Makefile-headers  Makefile.in  accessGrib.F90  accessNetcdf.f90  coord_compute.f90
libmisc/: Makefile.in
libmisc/m4/: ltoptions.m4  ltversion.m4
libmisc/src/: Makefile-deps  dateTimeMod.f90  dateTimeMod_v2.f90  sortingModule.f90  time.f90
libmisc/src/old/: dateTimeMod.orig.f90  testchar.f90  teste3.f90  tt.f90
libmisc/src/tmp/: datetime_module.f90
sigioBAM/: aclocal.m4  configure  configure.ac
sigioBAM/.svn/: wc.db
sigioBAM/config/: flags.template
sigioBAM/src/: TransformTools.f90  sigio_BAMMod.F90
w3lib-2.0.6/: Makefile~
